--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <meta charset="utf-8">
 <title>Zara</title>
 <link rel="stylesheet"type="text/css"href="..\Practica integradora 3\index.css" media="all"/>
-<style>h1{
+<style>
+body{
+body-background url(.\img\zaralogo.jpg);
+}
+h1{
  color: rgb(119, 136, 153); 
  font-framily:cursive;
 text-align:center;
@@ -101,7 +105,7 @@ text-align:right;
 
 </style>
 </head>
-<body background=".\img\zaralogo.jpg">
+<body>
 <h1>Zara</h1>
 
 <h2>Zara es una cadena de<br>moda española de Arteijo<br>(La coraña),España.<br>Perteneciente al grupo inditex. </h2>   
